# Android-NoiseGeneration-Cplusplus

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/dz/tp/noisegen/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BMPImage.h  CMakeLists.txt  PerlinNoise.h  native-lib.cpp
app/src/main/java/dz/tp/noisegen/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dz/tp/noisegen/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
